libosdc_la_SOURCES = \
	osdc/Objecter.cc \
	osdc/ObjectCacher.cc \
	osdc/Filer.cc \
	osdc/Striper.cc \
	osdc/Journaler.cc \
	osdc/cetcd.cc \
	osdc/cetcd_array.c \
	osdc/sds/sds.c \
	osdc/yajl/yajl.c \
	osdc/yajl/yajl_alloc.c \
	osdc/yajl/yajl_buf.c \
	osdc/yajl/yajl_encode.c \
	osdc/yajl/yajl_gen.c \
	osdc/yajl/yajl_lex.c \
	osdc/yajl/yajl_parser.c \
	osdc/yajl/yajl_tree.c \
	osdc/yajl/yajl_version.c 
noinst_LTLIBRARIES += libosdc.la

noinst_HEADERS += \
	osdc/Filer.h \
	osdc/Journaler.h \
	osdc/ObjectCacher.h \
	osdc/Objecter.h \
	osdc/Striper.h \
	osdc/WritebackHandler.h \
	osdc/cetcd.h \
	osdc/cetcd_array.h \
	osdc/cetcd_json_parser.h \
	osdc/sds/sds.h \
	osdc/yajl/yajl_alloc.h \
	osdc/yajl/yajl_buf.h \
	osdc/yajl/yajl_bytestack.h \
	osdc/yajl/yajl_common.h \
	osdc/yajl/yajl_encode.h \
	osdc/yajl/yajl_gen.h \
	osdc/yajl/yajl_lex.h \
	osdc/yajl/yajl_parse.h \
	osdc/yajl/yajl_parser.h \
	osdc/yajl/yajl_tree.h

